// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder acp --help 1`] = `
"ottili-coder acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: ottiliCoder.local)
                                                             [string] [default: "ottiliCoder.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder mcp --help 1`] = `
"ottili-coder mcp

manage MCP (Model Context Protocol) servers

Commands:
  ottili-coder mcp add [name]     add an MCP server
  ottili-coder mcp list           list MCP servers and their status                    [aliases: ls]
  ottili-coder mcp auth [name]    authenticate with an OAuth-enabled MCP server
  ottili-coder mcp logout [name]  remove OAuth credentials for an MCP server
  ottili-coder mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder attach --help 1`] = `
"ottili-coder attach <url>

attach to a running ottili-coder server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --dir         directory to run in                                                     [string]
  -c, --continue    continue the last session                                              [boolean]
  -s, --session     session id to continue                                                  [string]
      --fork        fork the session when continuing (use with --continue or --session)    [boolean]
  -p, --password    basic auth password (defaults to OTTILI_CODER_SERVER_PASSWORD)          [string]
  -u, --username    basic auth username (defaults to OTTILI_CODER_SERVER_USERNAME or 'ottili-coder')
                                                                                            [string]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder run --help 1`] = `
"ottili-coder run [message..]

run ottili-coder with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help                                  show help                                    [boolean]
  -v, --version                               show version number                          [boolean]
      --print-logs                            print logs to stderr                         [boolean]
      --log-level                             log level
                                                [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                                  run without external plugins                 [boolean]
      --command                               the command to run, use message for args      [string]
  -c, --continue                              continue the last session                    [boolean]
  -s, --session                               session id to continue                        [string]
      --fork                                  fork the session before continuing (requires
                                              --continue or --session)                     [boolean]
  -r, --resume                                list past conversations and resume the selected one
                                                                                           [boolean]
      --share                                 share the session                            [boolean]
  -m, --model                                 model to use in the format of provider/model  [string]
      --agent                                 agent to use                                  [string]
      --format                                format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file                                  file(s) to attach to message                   [array]
      --title                                 title for the session (uses truncated prompt if no
                                              value provided)                               [string]
      --attach                                attach to a running ottili-coder server (e.g.,
                                              http://localhost:4096)                        [string]
  -p, --password                              basic auth password (defaults to
                                              OTTILI_CODER_SERVER_PASSWORD)                 [string]
  -u, --username                              basic auth username (defaults to
                                              OTTILI_CODER_SERVER_USERNAME or 'ottili-coder')
                                                                                            [string]
      --dir                                   directory to run in, path on remote server if
                                              attaching                                     [string]
      --port                                  port for the local server (defaults to random port if
                                              no value provided)                            [number]
      --variant                               model variant (provider-specific reasoning effort,
                                              e.g., high, max, minimal)                     [string]
      --thinking                              show thinking blocks                         [boolean]
      --replay                                replay interactive session history on resume and after
                                              resize (use --no-replay to disable)
                                                                           [boolean] [default: true]
      --replay-limit                          cap visible interactive replay to the newest N
                                              messages                                      [number]
  -i, --interactive                           run in direct interactive split-footer mode
                                                                          [boolean] [default: false]
  -y, --dangerously-skip-permissions, --yolo  auto-approve permissions that are not explicitly
                                              denied (dangerous!)         [boolean] [default: false]
      --demo                                  enable direct interactive demo slash commands; pass
                                              one as the message to run it immediately
                                                                          [boolean] [default: false]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder debug --help 1`] = `
"ottili-coder debug

debugging and troubleshooting tools

Commands:
  ottili-coder debug config        show resolved configuration
  ottili-coder debug lsp           LSP debugging utilities
  ottili-coder debug rg            ripgrep debugging utilities
  ottili-coder debug file          file system debugging utilities
  ottili-coder debug scrap         list all known projects
  ottili-coder debug skill         list all available skills
  ottili-coder debug snapshot      snapshot debugging utilities
  ottili-coder debug startup       print startup timing
  ottili-coder debug agent <name>  show agent configuration details
  ottili-coder debug v2            debug v2 catalog and built-in plugins
  ottili-coder debug info          show debug information
  ottili-coder debug paths         show global paths (data, config, cache, state)
  ottili-coder debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder providers --help 1`] = `
"ottili-coder providers

manage AI providers and credentials

Commands:
  ottili-coder providers list               list providers and credentials             [aliases: ls]
  ottili-coder providers login [url]        log in to a provider
  ottili-coder providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder agent --help 1`] = `
"ottili-coder agent

manage agents

Commands:
  ottili-coder agent create  create a new agent
  ottili-coder agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder upgrade --help 1`] = `
"ottili-coder upgrade [target]

upgrade ottili-coder to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder uninstall --help 1`] = `
"ottili-coder uninstall

uninstall ottili-coder and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder serve --help 1`] = `
"ottili-coder serve

starts a headless ottili-coder server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: ottiliCoder.local)
                                                             [string] [default: "ottiliCoder.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder web --help 1`] = `
"ottili-coder web

start ottili-coder server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: ottiliCoder.local)
                                                             [string] [default: "ottiliCoder.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder models --help 1`] = `
"ottili-coder models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder stats --help 1`] = `
"ottili-coder stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder export --help 1`] = `
"ottili-coder export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder import --help 1`] = `
"ottili-coder import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder github --help 1`] = `
"ottili-coder github

manage GitHub agent

Commands:
  ottili-coder github install  install the GitHub agent
  ottili-coder github run      run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder pr --help 1`] = `
"ottili-coder pr <number>

fetch and checkout a GitHub PR branch, then run ottili-coder

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder session --help 1`] = `
"ottili-coder session

manage sessions

Commands:
  ottili-coder session list                list sessions
  ottili-coder session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder plugin --help 1`] = `
"ottili-coder plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder db --help 1`] = `
"ottili-coder db

database tools

Commands:
  ottili-coder db [query]     open an interactive sqlite3 shell or run a query             [default]
  ottili-coder db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder mcp list --help 1`] = `
"ottili-coder mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder mcp add --help 1`] = `
"ottili-coder mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder mcp auth --help 1`] = `
"ottili-coder mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  ottili-coder mcp auth list  list OAuth-capable MCP servers and their auth status     [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder mcp logout --help 1`] = `
"ottili-coder mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder providers list --help 1`] = `
"ottili-coder providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder providers login --help 1`] = `
"ottili-coder providers login [url]

log in to a provider

Positionals:
  url  ottili-coder auth provider                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder providers logout --help 1`] = `
"ottili-coder providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder agent create --help 1`] = `
"ottili-coder agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder agent list --help 1`] = `
"ottili-coder agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder session list --help 1`] = `
"ottili-coder session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder session delete --help 1`] = `
"ottili-coder session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder github install --help 1`] = `
"ottili-coder github install

install the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder github run --help 1`] = `
"ottili-coder github run

run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`ottili-coder CLI help-text snapshots every documented command emits stable help text: ottili-coder db path --help 1`] = `
"ottili-coder db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
